5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4014/executions/1592_1803.log
== SUBMITION (2019-04-08 15:41:55) 
-- CODE:
x=int(input("quatro numero de digitos:"))
y=(x//1000)
z=(Y%1000)//100
t=(z%1000(%100))//10
w=(t%1000(%100))%10
var1=(y*2)+(z*3)+(t*4)+(w*5)
var2=var1%11
print(var2)


-- EXECUTION TIME:
0.261296
-- ERROR:
  File "/home/codebench/codes/1592/1803/main.py", line 4
    t=(z%1000(%100))//10
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:41:59) 
-- CODE:
x=int(input("quatro numero de digitos:"))
y=(x//1000)
z=(Y%1000)//100
t=(z%1000(%100))//10
w=(t%1000(%100))%10
var1=(y*2)+(z*3)+(t*4)+(w*5)
var2=var1%11
print(var2)


-- ERROR:
File "XXXX", line 4
    t=(z%1000(%100))//10
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:43:30) 
-- CODE:
x=int(input("quatro numero de digitos:"))
y=(x//1000)
z=(Y%1000)//100
t=((z%1000)%100)//10
w=((t%1000)%100)%10
var1=(y*2)+(z*3)+(t*4)+(w*5)
var2=var1%11
print(var2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    z=(Y%1000)//100
NameError: name 'Y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:43:39) 
-- CODE:
x=int(input("quatro numero de digitos:"))
y=(x//1000)
z=(Y%1000)//100
t=((z%1000)%100)//10
w=((t%1000)%100)%10
var1=(y*2)+(z*3)+(t*4)+(w*5)
var2=var1%11
print(var2)


-- EXECUTION TIME:
0.147286
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1803/main.py", line 3, in <module>
    z=(Y%1000)//100
NameError: name 'Y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:43:41) 
-- CODE:
x=int(input("quatro numero de digitos:"))
y=(x//1000)
z=(Y%1000)//100
t=((z%1000)%100)//10
w=((t%1000)%100)%10
var1=(y*2)+(z*3)+(t*4)+(w*5)
var2=var1%11
print(var2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    z=(Y%1000)//100
NameError: name 'Y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:44:58) 
-- CODE:
x=int(input("quatro numero de digitos:"))
y=x//1000
z=(Y%1000)//100
t=((z%1000)%100)//10
w=((t%1000)%100)%10
var1=(y*2)+(z*3)+(t*4)+(w*5)
var2=var1%11
print(var2)


-- EXECUTION TIME:
0.196042
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1803/main.py", line 3, in <module>
    z=(Y%1000)//100
NameError: name 'Y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:44:59) 
-- CODE:
x=int(input("quatro numero de digitos:"))
y=x//1000
z=(Y%1000)//100
t=((z%1000)%100)//10
w=((t%1000)%100)%10
var1=(y*2)+(z*3)+(t*4)+(w*5)
var2=var1%11
print(var2)


-- EXECUTION TIME:
0.162848
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1803/main.py", line 3, in <module>
    z=(Y%1000)//100
NameError: name 'Y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:45:00) 
-- CODE:
x=int(input("quatro numero de digitos:"))
y=x//1000
z=(Y%1000)//100
t=((z%1000)%100)//10
w=((t%1000)%100)%10
var1=(y*2)+(z*3)+(t*4)+(w*5)
var2=var1%11
print(var2)


-- EXECUTION TIME:
0.180731
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1803/main.py", line 3, in <module>
    z=(Y%1000)//100
NameError: name 'Y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:45:00) 
-- CODE:
x=int(input("quatro numero de digitos:"))
y=x//1000
z=(Y%1000)//100
t=((z%1000)%100)//10
w=((t%1000)%100)%10
var1=(y*2)+(z*3)+(t*4)+(w*5)
var2=var1%11
print(var2)


-- EXECUTION TIME:
0.257803
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1803/main.py", line 3, in <module>
    z=(Y%1000)//100
NameError: name 'Y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:45:00) 
-- CODE:
x=int(input("quatro numero de digitos:"))
y=x//1000
z=(Y%1000)//100
t=((z%1000)%100)//10
w=((t%1000)%100)%10
var1=(y*2)+(z*3)+(t*4)+(w*5)
var2=var1%11
print(var2)


-- EXECUTION TIME:
0.305352
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1592/1803/main.py", line 3, in <module>
    z=(Y%1000)//100
NameError: name 'Y' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:45:01) 
-- CODE:
x=int(input("quatro numero de digitos:"))
y=x//1000
z=(Y%1000)//100
t=((z%1000)%100)//10
w=((t%1000)%100)%10
var1=(y*2)+(z*3)+(t*4)+(w*5)
var2=var1%11
print(var2)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    z=(Y%1000)//100
NameError: name 'Y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:49:10) 
-- CODE:
x=int(input("quatro numero de digitos:"))
y=x//1000
z=(y%1000)//100
t=((z%1000)%100)//10
w=((t%1000)%100)%10
var1=(y*2)+(z*3)+(t*4)+(w*5)
var2=var1%11
print(var2)


-- EXECUTION TIME:
0.14521
-- TEST CASE 1:
---- input:
2000
---- correct output:
10
---- user output:
4
-- TEST CASE 2:
---- input:
3550
---- correct output:
6
---- user output:
6
-- TEST CASE 3:
---- input:
0007
---- correct output:
3
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:49:48) 
-- CODE:
x=int(input("quatro numero de digitos:"))
y=x//1000
z=(y%1000)//100
t=((z%1000)%100)//10
w=((t%1000)%100)%10
var1=(y*2)+(z*3)+(t*4)+(w*5)
var2=var1%11
print(var2)


-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
